-Author Anahit update bootstrap homework 03.05

--- a/Anahit_Karyan_Bootstrap/3-03.05/index.html
+++ b/Anahit_Karyan_Bootstrap/3-03.05/index.html
@@ -54,32 +54,32 @@
             <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
             <div class="row">
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa fa-magic w-20 text-primary"> </i>
+                    <i class="fa fa fa-magic text-primary" style=" font-size: 40px;" style=" font-size: 40px;"> </i>
                     <h6> Ex copidatat eu </h6>
                     <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur sit amet. </p>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa fa-heart w-20 text-primary"> </i>
+                    <i class="fa fa fa-heart  text-primary" style=" font-size: 40px;"> </i>
                     <h6> Tempor aute occaecat </h6>
                     <p class="text-secondary"> Lorem ipsum dolor sit amet. </p>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa fa-rocket  w-20 text-primary"> </i>
+                    <i class="fa fa fa-rocket   text-primary" style=" font-size: 40px;"> </i>
                     <h6> Voluptade ex irure </h6>
                     <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur sit amet. </p>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa fa-paperclip w-20 text-primary"> </i>
+                    <i class="fa fa fa-paperclip  text-primary" style=" font-size: 40px;"> </i>
                     <h6> Tempor commodo </h6>
                     <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur sit amet. </p>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa-desktop w-20 text-primary"> </i>
+                    <i class="fa fa-desktop  text-primary" style=" font-size: 40px;"> </i>
                     <h6> Et fugiat sint occaecat </h6>
                     <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur sit amet. </p>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <i class="fa fa-inbox w-20 text-primary"> </i>
+                    <i class="fa fa-inbox  text-primary" style=" font-size: 40px;"> </i>
                     <h6> Et labore tempor et </h6>
                     <p class="text-secondary"> Lorem ipsum dolor, consectetur. </p>
                 </div>             
@@ -91,8 +91,8 @@
                     <p class="text-secondary"> Lorem ipsum dolor sit amet, consectetur sit amet. </p>
                     <div class="row">
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo2.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo2.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Ex copidatat eu </h4>
                                      <p class="card-text text-secondary"> Some example text some example text. John Doe is an architect and engineer</p>
@@ -105,8 +105,8 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo3.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo3.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Tempor aute occaecat </h4>
                                      <p class="card-text text-secondary"> Some Johntect  coe is an architect and engineer</p>
@@ -119,8 +119,8 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo4.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo4.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Ex copidatat eu </h4>
                                      <p class="card-text text-secondary"> Some example text some example text. John Doe is an architect and engineer</p>
@@ -133,8 +133,8 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo5.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo5.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Ex copidatat eu </h4>
                                      <p class="card-text text-secondary"> Some example text some example text. John Doe is an architect and engineer</p>
@@ -146,8 +146,8 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo6.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo6.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Ex copidatat eu </h4>
                                      <p class="card-text text-secondary"> Some example text some example text. John Doe is an architect and engineer</p>
@@ -159,8 +159,8 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
-                             <div class="card shadow  bg-white rounded">
-                                 <img class="card-img-top" src="./Resurses/photo7.png" alt="Card image" style="width:100%">
+                             <div class="card shadow  bg-white rounded my-3">
+                                 <img class="card-img-top img-fluid" src="./Resurses/photo7.png" alt="Card image">
                                  <div class="card-body">
                                      <h4 class="card-title"> Ex copidatat eu </h4>
                                      <p class="card-text text-secondary"> Some example text some example text. John Doe is an architect and engineer</p>
@@ -174,8 +174,8 @@
                     </div>
                 </div>
         </div>
-        <div class="d-flex flex-column">
-            <i class="fa fa fa-heart w-20 align-self-center"> </i>
+        <div class="d-flex flex-column p-5">
+            <i class="fa fa fa-heart align-self-center" style=" font-size: 40px;"> </i>
             <h6 class="align-self-center"> There is no place like 127.0.0.1 </h6>
             <p class="text-secondary align-self-center"> -Lorem ipsum dolor sit amet </p>
         </div>
@@ -203,10 +203,10 @@
             <div class="container">
             <div class="row">
                  <div class="col-sm-12 col-md-6">
-                     <p class="text-white text-left text-sm-center"> ©2018 Your company.All rights reserved.</p>
+                     <p class="text-white text-md-left text-sm-center"> ©2018 Your company.All rights reserved.</p>
                  </div>
                  <div class="col-sm-12 col-md-6">
-                     <p class="text-white text-right text-sm-center"> Template By Bootsraps</p>
+                     <p class="text-white text-md-right text-sm-center"> Template By Bootsraps</p>
                 </div>
             </div>
             </div>
