--- a/Tigran_Nalbandyan/JavaScript/Durak/index.html
+++ b/Tigran_Nalbandyan/JavaScript/Durak/index.html
@@ -7,32 +7,13 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div id="player-2">
-			<center>
-			<div class="card">
-				<span>♠ 10</span>
-			</div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			</center>
+		<div id="player-2" class="cards">
 		</div>
 		<div>
 			<div class="card" id="trump"></div>
 		</div>
-		<div id="player-1">
-			<center>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			</center>
+		<div id="player-1" class="cards">
 		</div>
-
 		<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 	</body>
 </html>
