--- a/Narek_Jilavyan/HTML/2019.05.10/divsColor/divsColor.html
+++ b/Narek_Jilavyan/HTML/2019.05.10/divsColor/divsColor.html
@@ -7,6 +7,6 @@
     <div id="div1"> 
       <div id="div2"> </div> 
     </div>
-    <script src="divsColor.js"></script> 
+    <script src="./script/divsColor.js"></script> 
   </body>
 </html>
