--- a/Narek_Jilavyan/HTML/2019.05.10/filtering/textFilter.html
+++ b/Narek_Jilavyan/HTML/2019.05.10/filtering/textFilter.html
@@ -9,6 +9,6 @@
     	<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
     	<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     	
-        <script src="textFilter.js"></script> 
+        <script src="./script/textFilter.js"></script> 
     </body>
 </html>
