--- a/Narek_Jilavyan/HTML/2019.05.10/arrayCopy/arrayCopy.html
+++ b/Narek_Jilavyan/HTML/2019.05.10/arrayCopy/arrayCopy.html
@@ -4,7 +4,7 @@
   <body>
     </html><h3>Array copy</h3>
     
-    <script src="arrayCopy.js"></script>
+    <script src="./script/arrayCopy.js"></script>
   </body>
 </html>
 
