--- a/Narek_Jilavyan/HTML/2019.05.10/matrixMultiplication/matrixMultiplication.html
+++ b/Narek_Jilavyan/HTML/2019.05.10/matrixMultiplication/matrixMultiplication.html
@@ -4,7 +4,7 @@
   <body>
     </html><h3>Matrix Multiplication</h3>
     
-    <script src="matrixMultiplication.js"></script>
+    <script src="./script/matrixMultiplication.js"></script>
   </body>
 </html>
 
