--- a/Narek_Jilavyan/HTML/2019.05.10/maxSum/maxSum.html
+++ b/Narek_Jilavyan/HTML/2019.05.10/maxSum/maxSum.html
@@ -4,7 +4,7 @@
   <body>
     </html><h3>max sum of digites</h3>
     
-    <script src="maxSum.js"></script>
+    <script src="./script/maxSum.js"></script>
   </body>
 </html>
 
