Make playable card check and computer move

--- a/Tigran_Nalbandyan/JavaScript/Durak/index.html
+++ b/Tigran_Nalbandyan/JavaScript/Durak/index.html
@@ -7,13 +7,13 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div id="player-2" class="cards">
-		</div>
-		<div>
+		<div id="player-2" class="cards"></div>
+		<div id="middle">
 			<div class="card" id="trump"></div>
+			<div class="cards" id="table"></div>
 		</div>
-		<div id="player-1" class="cards">
-		</div>
-		<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
-	</body>
+	</div>
+	<div id="player-1" class="cards"></div>
+	<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
+</body>
 </html>
