Make card take functionality and card check. Add trash button

--- a/Tigran_Nalbandyan/JavaScript/Durak/index.html
+++ b/Tigran_Nalbandyan/JavaScript/Durak/index.html
@@ -14,6 +14,10 @@
 		</div>
 	</div>
 	<div id="player-1" class="cards"></div>
+	<div class="buttons">
+		<button type="button" id="button-trash">To trash</button>
+		<button type="button"></button>
+	</div>
 	<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
