--- a/Anahit_Karyan/JS/3-13.05/index.html
+++ b/Anahit_Karyan/JS/3-13.05/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Homework 10.05</title>
+        <title> Fool Game </title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -12,24 +12,23 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body class="bg-dark">
-    	<h1 class="text-center text-white"> Fool Game </h1>
-         <button class="btn btn-warning text-white" onclick="start()"> Start game </button>
+        <div class="row">
+            <button class="btn btn-warning text-white" onclick="start()"> Start game </button>
+        	<h1 class="text-center text-white"> Fool Game </h1>
+           
+        </div>
     	<div class="row d-flex  bg-success cardSection" id="p1-section"> 
-    		<h3 class="text-left text-white"> Player1 </h3>
+    		<h3 class="text-left text-white"> .... Player1 </h3>
     	</div>
-    	<div class="row d-inline-flex p-4 cardSection">
-    		 <img src="./Resurses/cards.png" class="img-rounded img-cards" alt="Cinque Terre"> 
-             <div class="bg-white w-60"> .
-
-             </div>
-    		 <div class="d-flex justify-end">
-	    		 <button class="btn btn-danger justify-end text-white mr-0 collect"> Collect </button> 
-	    		 <button class="btn btn-success justify-end text-white right mr-0 bita"> Bita </button>
-    		 </div>
-
+    	<div class="row">
+    		<img src="./Resurses/cards.png" class="img-rounded img-cards" alt="Cinque Terre" onclick="calodClick()">
+    		<button class="btn btn-danger justify-end text-white mr-0 collect" onclick="collect()"> Collect </button> 
+    		<button class="btn btn-success justify-end text-white right mr-0 bita" onclick="bita()"> Bita </button>
+            <div class="d-inline-flex p-4 cardSection">
+            </div>
     	</div>
     	<div class="row d-flex justify-around bg-success cardSection" id="p2-section"> 
-    		<h3 class="text-left text-white"> Player2 </h3>
+    		<h3 class="text-left text-white"> .... Player2 </h3>
     	</div>
 
         <script src="./JS/fool.js"></script> 
