--- a/Anahit_Karyan/JS/3-13.05/index.html
+++ b/Anahit_Karyan/JS/3-13.05/index.html
@@ -18,17 +18,19 @@
            
         </div>
     	<div class="row d-flex  bg-success cardSection" id="p1-section"> 
-    		<h3 class="text-left text-white"> .... Player1 </h3>
+    		<h3 class="text-left text-white"> ....Player1.... </h3>
     	</div>
     	<div class="row">
-    		<img src="./Resurses/cards.png" class="img-rounded img-cards" alt="Cinque Terre" onclick="calodClick()">
+    		<div class="calod">
+    			<img src="./Resurses/cards.png" class="img-rounded img-cards" alt="Cinque Terre" onclick="calodClick()">
+    		</div>
     		<button class="btn btn-danger justify-end text-white mr-0 collect" onclick="collect()"> Collect </button> 
     		<button class="btn btn-success justify-end text-white right mr-0 bita" onclick="bita()"> Bita </button>
             <div class="d-inline-flex p-4 cardSection">
             </div>
     	</div>
     	<div class="row d-flex justify-around bg-success cardSection" id="p2-section"> 
-    		<h3 class="text-left text-white"> .... Player2 </h3>
+    		<h3 class="text-left text-white"> ....Player2.... </h3>
     	</div>
 
         <script src="./JS/fool.js"></script> 
