Add Durak logic and fix bugs

--- a/Tigran_Nalbandyan/JavaScript/Durak/index.html
+++ b/Tigran_Nalbandyan/JavaScript/Durak/index.html
@@ -9,14 +9,15 @@
 	<body>
 		<div id="player-2" class="cards"></div>
 		<div id="middle">
+			<span id="cards-count"></span>
 			<div class="card" id="trump"></div>
 			<div class="cards" id="table"></div>
 		</div>
 	</div>
 	<div id="player-1" class="cards"></div>
 	<div class="buttons">
+		<button type="button" id="button-take">Take</button>
 		<button type="button" id="button-trash">To trash</button>
-		<button type="button"></button>
 	</div>
 	<script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
