--- a/Anahit_Karyan/JS/3-13.05/index.html
+++ b/Anahit_Karyan/JS/3-13.05/index.html
@@ -23,10 +23,13 @@
     	<div class="row">
     		<div class="calod">
     			<img src="./Resurses/cards.png" class="img-rounded img-cards" alt="Cinque Terre" onclick="calodClick()">
+    			<h3 class="text-white"> Cozyr </h3>
     		</div>
     		<button class="btn btn-danger justify-end text-white mr-0 collect" onclick="collect()"> Collect </button> 
     		<button class="btn btn-success justify-end text-white right mr-0 bita" onclick="bita()"> Bita </button>
-            <div class="d-inline-flex p-4 cardSection">
+            <div class="p-4 d-block cardSection">
+            	<div class=" d-flex cardPlayer divPlayer1 "> </div>
+            	<div class="d-flex cardPlayer divPlayer2 "> </div>
             </div>
     	</div>
     	<div class="row d-flex justify-around bg-success cardSection" id="p2-section"> 
