Add js homework 17.05: add data-* in html

--- a/Tigran_Nalbandyan/JavaScript/Ajax/index.html
+++ b/Tigran_Nalbandyan/JavaScript/Ajax/index.html
@@ -10,6 +10,20 @@
 		<title>Ajax Request</title>
 	</head>
 	<body>
-		<script src="js/script.js"></script>
+		<table>
+			<caption>table title and/or explanatory text</caption>
+			<thead>
+				<tr>
+					<th>header</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>data</td>
+				</tr>
+			</tbody>
+		</table>
+		<script src="js/script.js"></script>		
+		<script src="js/script_2.js"></script>
 	</body>
 </html>
