-Author Arthur Aghajanyan
        -Corected homework 17.05.2019

--- a/Arthur_Aghajanyan/homework17.05.2019/lesson.html
+++ b/Arthur_Aghajanyan/homework17.05.2019/lesson.html
@@ -6,5 +6,7 @@
     </head>
     <body> 
         <p>To add a caption to a table, use the caption tag.</p>
+	<div></div>
+		<div></div>
     </body>
 </html>
