-Modifired index.html

--- a/Armine_Gevorgyan/2019.05.13/index.html
+++ b/Armine_Gevorgyan/2019.05.13/index.html
@@ -32,6 +32,6 @@
 				<div id="div4"style = "margin:100px">
 			</div>
 		</div>
-        <script src="durak.js"></script>
+        <script src="js/durak.js"></script>
     </body>
 </html>
